fix(input-group): place active input group behind modal

--- a/scss/styles/_input-group.scss
+++ b/scss/styles/_input-group.scss
@@ -28,7 +28,7 @@
     }
     border-radius: $input-border-radius;
     .form-control, .btn {
-      z-index:  $zindex-modal;
+      z-index:  $zindex-modal - 5;
       opacity: 0.35;
       border-color: $input-focus-border-color;
     }
